# bluearchive

./: Cargo.toml
.zed/: debug.json
assets/: CommonAtlas.yaml  nagisa_spr.atlas  nagisa_spr.json  story.ink
examples/: character.rs  macroquad_test.rs
src/: lib.rs  main.rs
src/spine/: mod.rs  spine.rs
src/story/: character.rs  game_state.rs  input.rs  mod.rs  resource.rs  sprite.rs  texture_manager.rs  ui.rs
